--- a/frontend/src/Admin/Components/Card/AdminItem/AdminItem.css
+++ b/frontend/src/Admin/Components/Card/AdminItem/AdminItem.css
@@ -1,17 +1,73 @@
-.admin-item-id {
-  width: 5rem;
+.AdminItem-row {
+  transition: all 0.4s ease;
+}
+  .AdminItem-row:hover {
+  box-shadow: inset 0 0 35px hsl(0, 0%, 34%);
+  z-index: 10;
 }
 
-.admin-item-img img {
+
+.AdminItem-row td {
+  padding: 0 20px 0 20px;
+}
+
+  .AdminItem-row #index {
+  background: hsl(0, 0%, 90%);
+  padding: 0;
+}
+
+.AdminItem-row #image {
+  background: rgba(0, 0, 0, 0.2);
+}
+
+.AdminItem-row #image img {
   height: 100%;
 }
 
-.admin-item-actions {
-  width: 15rem;
+
+.AdminItem-row #name {
+  font-weight: bold;
+
 }
 
-.admin-item-actions #edit,
-.admin-item-actions #delete {
+
+.AdminItem-row #category span {
+  display: inline-block;
+  padding: 4px 8px;
+  border-radius: 12px;
+  font-size: 0.7rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 0.2px;
+  border: 1px solid transparent;
+  white-space: nowrap;
+  max-width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  background: #ecfeff; color: #0e902a; border-color: #67f97a;
+}
+
+
+.AdminItem-row #price {
+  font-weight: bold;
+  color: rgb(5, 150, 105);
+}
+
+
+.AdminItem-row #stock {
+  font-weight: bold;
+  color: red;
+}
+
+
+
+.AdminItem-row #actions {
+  width: 15rem;
+  padding: 0;
+}
+
+.AdminItem-row #actions #edit,
+.AdminItem-row #actions #delete {
   width: 7rem;
   height: 2.2rem;
   border-radius: 10px;
@@ -20,26 +76,26 @@
   margin-left: 10px;
   margin-top: 2px;
 }
-.admin-item-actions #edit {
+.AdminItem-row #actions #edit {
   background: rgb(0, 91, 196);
 }
-.admin-item-actions #edit:hover{
+.AdminItem-row #actions #edit:hover{
   background: rgb(0, 80, 172);
 }
-.admin-item-actions #edit:active{
+.AdminItem-row #actions #edit:active{
   background: rgb(0, 67, 145);
 }
 
-.admin-item-actions #delete {
+.AdminItem-row #actions #delete {
   background: rgb(210, 0, 0);
 }
-.admin-item-actions #delete:hover{
+.AdminItem-row #actions #delete:hover{
   background: rgb(190, 0, 0);
 }
-.admin-item-actions #delete:active{
+.AdminItem-row #actions #delete:active{
   background: rgb(150, 0, 0);
 }
 
-.admin-item-actions * {
+.AdminItem-row #actions * {
   color: white;
 }
