--- a/frontend/src/Components/CartItem/CartItem.css
+++ b/frontend/src/Components/CartItem/CartItem.css
@@ -1,23 +1,34 @@
+.CartItem-row #index {
+  background: hsl(0, 0%, 94%);
+  border-right: 1px solid lightgrey;
+}
 
-.CartItem-img {
+
+
+.CartItem-row #img {
     height: 100%;
     max-height: 200px;
 }
 
-.CartItem-img img{
+.CartItem-row #image img{
     height: 100%;
     object-fit: contain;
 }
 
-.CartItem-quantity button {
+.CartItem-row #quantity button {
     width: 2.5rem;
     height: 2rem;
     margin: 20px;
     font-size: 1.2rem;
     cursor: pointer;
+    transition: all 0.4s ease;
 }
 
-.CartItem-remove button {
+.CartItem-row #quantity button:hover {
+    box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.2);
+}
+
+.CartItem-row #remove button {
     width: 4rem;
     height: 2.5rem;
     margin: 10px;
@@ -26,7 +37,10 @@
     border: none;
     font-size: 1rem;
     cursor: pointer;
+    transition: all 0.4s ease;
 }
-.CartItem-remove button * {
-    color: white;
+
+.CartItem-row #remove button:hover {
+    background:hsl(0, 100%, 35%);
+    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.2);
 }
