--- a/frontend/src/Pages/CSS/Cart.css
+++ b/frontend/src/Pages/CSS/Cart.css
@@ -2,13 +2,22 @@
   margin: 100px 270px;
 }
 
+.Cart-cart {
+  box-sizing: border-box;
+  padding: 40px;
+  border-radius: 20px;
+  background: white;
+  box-shadow: 0 15px 30px 30px rgba(0, 0, 0, 0.1);
+}
 
 .Cart-cart #table {
   background: white;
   width: 100%;
   font-size: 1.1rem;
   overflow: hidden;
-  margin-top: 10px;
+  margin-top: 20px;
+  border-collapse: collapse;
+  border-radius: 15px;
 }
 
 .Cart-cart #table td:last-child {
@@ -43,12 +52,6 @@
   background: lightgrey;
 }
 
-.Cart-cart #table .index-bar-cell {
-  background: hsl(0, 0%, 94%);
-  border-right: 1px solid lightgrey;
-}
-
-
 .Cart-cart #table #image-col {
   width: 15%;
 }
@@ -66,7 +69,8 @@
 
 .Cart-checkout {
   display: flex;
-  margin: 100px 0px;
+  margin: 50px 0px;
+  justify-content: space-between;
 }
 
 
@@ -74,10 +78,12 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  margin-right: 200px;
+  margin-right: 100px;
   gap: 40px;
   background: white;
   padding: 50px;
+  border-radius: 30px;
+  box-shadow: 0 15px 30px 30px rgba(0, 0, 0, 0.1);
 }
 
 .Cart-total-item {
@@ -91,14 +97,22 @@
   height: 58px;
   outline: none;
   border: none;
-  background: #ff5a5a;
+  background: hsl(0, 100%, 60%);
   color: white;
   font-size: 16px;
   font-weight: 600;
   cursor: pointer;
+  transition: all 0.4s ease;
+  border-radius: 15px;
 }
 .Cart-total button:hover {
-  background: #e04e4e;
+  background: hsl(0, 100%, 65%);
+  box-shadow: 0 0 0px 10px rgba(255, 0, 0, 0.3);
+}
+.Cart-total button:active {
+  transform: translateY(4px);
+  background: hsl(0, 100%, 40%);
+  box-shadow: 0 0 30px 15px rgba(255, 0, 0, 0.3);
 }
 
 .Cart-promocode {
