--- a/frontend/src/Pages/CSS/Checkout.css
+++ b/frontend/src/Pages/CSS/Checkout.css
@@ -6,19 +6,31 @@
   align-items: center;
 }
 
+.Checkout-container {
+  width: 100%;
+    background: hsl(0, 0%, 100%);
+  border-radius: 20px;
+  padding: 30px 10px 60px 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .Checkout-content {
   display: flex;
   justify-content: space-evenly;
   margin-top: 20px;
   width: 100%;
+
 }
 
 .Checkout-items,
 .Checkout-right > div {
   border: 1px solid #ddd;
-  padding: 15px;
-  border-radius: 8px;
+  padding: 15px 25px;
+  border-radius: 12px;
   background: #fff;
+  box-shadow: 0 8px 30px 15px rgba(0, 0, 0, 0.1);
 }
 
 .Checkout-items h3,
@@ -70,6 +82,11 @@
   padding: 8px;
   border: 1px solid #ccc;
   border-radius: 5px;
+  transition: all 0.4s ease;
+}
+.Checkout-shipinfo input:focus {
+  outline: none;
+  box-shadow: 0 0 0px 3px rgba(0, 0, 0, 0.3);
 }
 
 
@@ -104,8 +121,36 @@
 .Checkout-placeorder {
   padding: 10px;
   height: 3rem;
-  background: rgb(255, 213, 0);
+  background: hsl(50, 100%, 50%);
   border: none;
   border-radius: 8px;
   cursor: pointer;
+  transition: all 0.4s ease;
+  font-weight: bold;
+  /* box-shadow: 0 3px 10px 10px rgba(0, 0, 0, 0.1); */
+}
+
+.Checkout-placeorder:hover {
+  background: hsl(50, 100%, 60%);
+  box-shadow: 0 0 0px 10px rgba(255, 213, 0, 0.3);
+}
+.Checkout-placeorder:active {
+  background: hsl(50, 100%, 40%);
+  box-shadow: 0 3px 10px 10px rgba(0, 0, 0, 0.1);
+  transform: translateY(4px);
+}
+
+
+
+.Checkout-OrderPreview-overlay {
+  z-index: 1000;
+  background: rgba(0, 0, 0, 0.3);
+  position: fixed;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
