modified main page

--- a/frontend/src/Pages/CSS/ShopCategory.css
+++ b/frontend/src/Pages/CSS/ShopCategory.css
@@ -2,35 +2,35 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-.shopcategory-banner{
+  }
+  
+  .shopcategory-banner {
     width: 80vw;
     margin: 30px;
-}
-.shopcategory-banner img{
+  }
+  
+  .shopcategory-banner img {
     width: 100%;
-}
-
-
-.shopcategory-indexSort{
+  }
+  
+  .shopcategory-indexSort {
     display: flex;
     width: 80vw;
     margin: 10px;
     justify-content: space-between;
     align-items: center;
-}
-
-
-.shopcategory-products{
+  }
+  
+  .shopcategory-products {
     width: 80vw;
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(200px,2fr));
-    row-gap:  20px;
-    column-gap: 5px;
-}
-
-.shopcategory-loadmore{
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 20px;
+    justify-content: center;
+    max-width: 1400px;
+  }
+  
+  .shopcategory-loadmore {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -41,10 +41,12 @@
     background: #ffffff;
     font-size: 18px;
     font-weight: 500;
-}
-.shopcategory-loadmore button{
+  }
+  
+  .shopcategory-loadmore button {
     font-size: 18px;
     border: none;
     background: none;
     cursor: pointer;
-}
+  }
+  
