--- a/frontend/src/Components/CheckoutOrderPreview/CheckoutOrderPreview.css
+++ b/frontend/src/Components/CheckoutOrderPreview/CheckoutOrderPreview.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 50px;
+  padding: 30px 50px;
   border-radius: 30px;
 }
 
@@ -17,7 +17,7 @@
   width: fit-content;
   padding: 20px 30px;
   text-align: center;
-  background: hsl(93, 71%, 45%);
+  background: hsl(87, 75%, 45%);
   border-radius: 20px;
   box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.1);
 }
@@ -27,11 +27,16 @@
 }
 
 .CheckoutOrderPreview-container #order {
-    background: white;
-    padding: 30px;
-    box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.1);
-    margin: 30px;
-    border-radius: 20px;
+  background: white;
+  padding: 30px;
+  box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.1);
+  margin: 30px;
+  border-radius: 20px;
+}
+
+.CheckoutOrderPreview-container #order #content {
+  max-height: calc(90vh - 470px);
+  overflow-y: scroll;
 }
 .CheckoutOrderPreview-container #order hr {
     margin: 10px 0 10px 0;
@@ -54,16 +59,21 @@
     font-weight: bold;
     height: 3.5rem;
     width: 100%;
-    box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.1); */
     transition: all 0.4s ease;
     cursor: pointer;
 }
 
+.CheckoutOrderPreview-container #navigate button:hover {
+  box-shadow: 0 0 0px 8px rgba(0, 0, 0, 0.2);
+}
+
 .CheckoutOrderPreview-container #navigate #continueshopping {
-    background: hsl(93, 71%, 45%);
+    background: hsl(87, 75%, 45%);
     color: white;
 }
 
-.CheckoutOrderPreview-container #navigate button:hover {
-    box-shadow: 0 0 0px 8px rgba(0, 0, 0, 0.2);
+.CheckoutOrderPreview-container #navigate #vieworders {
+    background: hsl(0, 0%, 70%);
+    color: white;
 }
