--- a/frontend/src/Components/OrderRow/OrderRow.css
+++ b/frontend/src/Components/OrderRow/OrderRow.css
@@ -1,13 +1,56 @@
 .Order-row {
     background: linear-gradient(to bottom, #fcfcfc, #f4f4f4);
+    height: 8rem;
+}
+
+
+
+.Order-row td {
+  padding: 10px;
+  margin-top: 20px;
+  height: 100%;
+
+  border-top: 2px solid hsl(83, 71%, 45%);
+  border-bottom: 2px solid hsl(83, 71%, 45%);
+  border-right: 2px solid rgb(236, 236, 236);
+
+  text-align: center;
+  vertical-align: center;
+}
+
+.Order-row td:first-child {
+  border-radius: 20px 0px 0px 20px;
+  border-left: none;
+}
+
+.Order-row td:last-child {
+  border-radius: 0px 20px 20px 0px;
+  border-right: none;
+}
+
+.Order-row #image {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+
+    background: rgba(0, 0, 0, 0.2);
+ 
+    display: flex;
+    justify-content: center;
+    overflow: hidden;
+}
+
+.Order-row #image img {
+    height: calc(8rem + 10px);
 }
 
 .Order-row #content {
     max-width: 300px;
+    padding: 10px 20px;
 }
 
 .Order-row #index {
-    background: hsl(86, 50%, 52%);
+    background: rgb(121, 178, 52);
     color: white;
     font-weight: bold;
 }
@@ -21,7 +64,7 @@
 .Order-row #action button {
     border: none;
     border-radius: 5px;
-    background: linear-gradient(45deg,hsl(83, 71%, 45%),hsl(88, 71%, 38%));
+    background: rgb(121, 178, 52);
     color: white;
     font-size: 1rem;
     font-weight: bold;
