--- a/frontend/src/Admin/Components/Card/AdminItem/AdminItem.css
+++ b/frontend/src/Admin/Components/Card/AdminItem/AdminItem.css
@@ -2,13 +2,15 @@
   transition: all 0.4s ease;
 }
   .AdminItem-row:hover {
-  box-shadow: inset 0 0 35px hsl(0, 0%, 34%);
+  box-shadow:
+    inset 0 -35px 35px -35px hsl(0, 0%, 34%),
+    inset 0 35px 35px -35px hsl(0, 0%, 34%);
   z-index: 10;
 }
 
 
 .AdminItem-row td {
-  padding: 0 20px 0 20px;
+  padding: 10px 20px;
 }
 
   .AdminItem-row #index {
@@ -17,10 +19,11 @@
 }
 
 .AdminItem-row #image {
-  background: rgba(0, 0, 0, 0.2);
+  background: white;
 }
 
 .AdminItem-row #image img {
+  background: white;
   height: 100%;
 }
 
