--- a/frontend/src/Components/OrderView/OrderView.css
+++ b/frontend/src/Components/OrderView/OrderView.css
@@ -1,7 +1,7 @@
 .OrderView-container {
   position: relative;
   width: clamp(500px, 30vw, 1200px);
-  padding: 30px 50px;
+  padding: 30px;
   /* box-sizing: border-box; */
   
   
@@ -27,7 +27,6 @@
 
   background: hsl(83, 71%, 45%);
   border-radius: 15px;
-  box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.1);
   
   text-align: center;
 }
@@ -43,7 +42,7 @@
 
   background: white;
   border-radius: 20px;
-  box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.05);
 
   display: flex;
   flex-direction: column;
@@ -65,28 +64,83 @@
 }
 
 .OrderView-container #order #status {
-  width: fit-content;
-  text-align: center;
-  /* background: white;
-  box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.1);
-  border-radius: 5px;
-  padding: 10px 50px; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.OrderView-container #order #status #payment {
+
+
+.OrderView-container #order #status .payment {
+  margin-top: 7px;
+  
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  
+}
+
+
+/* Payment status styles */
+.OrderView-container #order #status .payment .payment-status {
+  height: 40px;
+
   font-weight: bold;
   font-size: 1.1rem;
   color: rgb(56, 56, 56);
-  margin-bottom: 7px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
 }
 
+.OrderView-container #order #status .payment .payment-status.unpaid {
+  color: rgb(255, 255, 255);
+  background: hsl(0, 63%, 56%);
+}
+.OrderView-container #order #status .payment .payment-status.paid {
+  color: rgb(255, 255, 255);
+  background: hsl(91, 100%, 37%);
+}
 
+/* Pay button styles */
+.OrderView-container #order #status .pay {
+  max-width: 300px;
+  height: 40px;
+  padding: 10px;
+  margin: 0px ;
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  background: hsl(103, 60%, 40%);
+  
+  color: white;
+  font-size: 1rem;
+  
+  transition: all 0.4s ease;
+  cursor: pointer;
+}
 
-.OrderView-container #order #status #ship {
+.OrderView-container #order #status .pay svg {
+  width: 30px;
+}
+
+.OrderView-container #order #status .pay:hover {
+  box-shadow: 0 0 0 8px hsla(101, 60%, 61%, 0.7);
+}
+
+/* Ship status styles */
+
+.OrderView-container #order #status .ship {
+  margin-top: 10px;
   padding: 20px 60px;
   
-
-  background: rgb(221, 221, 221);
+  
+  background: hsl(0, 0%, 87%);
   border-radius: 12px;
   
   color: rgb(44, 44, 44);
@@ -95,7 +149,40 @@
   text-align: center;
 }
 
+.OrderView-container #order #status .ship.canceled,
+.OrderView-container #order #status .ship.cancelled_due_to_insufficient_stock,
+.OrderView-container #order #status .ship.cancelled_due_to_payment_expiry
+{
+  background: hsl(0, 63%, 56%);
+  color: white;
+}
 
+.OrderView-container #order #status .ship.processing
+{
+  background: hsl(0, 0%, 51%);
+  color: white;
+}
+
+
+
+.OrderView-container #order #status .ship.in_transit {
+  background: hsl(49, 85%, 50%);
+  color: white;
+}
+
+.OrderView-container #order #status .ship.refunding
+{
+  background: hsl(246, 63%, 46%);
+  color: white;
+}
+
+.OrderView-container #order #status .ship.delivered,
+.OrderView-container #order #status .ship.refunded,
+.OrderView-container #order #status .ship.returned
+{
+  background: hsl(101, 63%, 46%);
+  color: white;
+}
 
 .OrderView-container #order #status #update {
   color: grey;
