--- a/frontend/src/Components/OrderRow/OrderRow.css
+++ b/frontend/src/Components/OrderRow/OrderRow.css
@@ -1,5 +1,5 @@
 .Order-row {
-    background: linear-gradient(to bottom, #fcfcfc, #f4f4f4);
+    background: white;
     height: 8rem;
 }
 
@@ -49,6 +49,25 @@
     padding: 10px 20px;
 }
 
+/* Payment status badge */
+.Order-row .payment span {
+    padding: 5px 10px;
+    
+    background: rgb(241, 241, 241);
+    border-radius: 60px;
+    border: 2px solid lightgrey;
+    
+    color: grey;
+
+    white-space: nowrap;
+}
+.Order-row .payment.paid span {
+    background: rgb(56, 180, 7);
+    border-color: rgb(0, 155, 0);
+    color: rgb(239, 255, 228);
+}
+
+
 .Order-row #index {
     background: rgb(121, 178, 52);
     color: white;
@@ -64,7 +83,7 @@
 .Order-row #action button {
     border: none;
     border-radius: 5px;
-    background: rgb(121, 178, 52);
+    background: hsl(87, 45%, 55%);
     color: white;
     font-size: 1rem;
     font-weight: bold;
