--- a/frontend/src/Pages/CSS/Orders.css
+++ b/frontend/src/Pages/CSS/Orders.css
@@ -32,7 +32,7 @@
   border: 2px solid lightgrey;
   border-radius: 15px;
   border-spacing: 0 10px;
-box-shadow: 0 15px 30px 30px rgba(0, 0, 0, 0.1);
+box-shadow: 0 15px 30px 30px rgba(0, 0, 0, 0.05);
   
   font-size: 1.1rem;
   overflow: hidden;
@@ -45,13 +45,7 @@ box-shadow: 0 15px 30px 30px rgba(0, 0, 0, 0.1);
   border-right: 1px solid rgb(255, 255, 255);
   border-bottom: 2px solid lightgrey;
   border-top: 2px solid lightgrey;
-  background: linear-gradient(
-    to bottom,
-    hsl(0, 0%, 100%) 0%,
-    hsl(0, 0%, 88%) 15%,
-    hsl(0, 0%, 99%) 40%,
-    hsl(0, 0%, 87%) 85%
-  );
+  background: rgb(240, 240, 240);
   color: rgb(37, 37, 37);
 }
 
@@ -67,13 +61,7 @@ box-shadow: 0 15px 30px 30px rgba(0, 0, 0, 0.1);
 
 .Orders-table #index-col {
   padding: 0;
-  background: linear-gradient(
-    to bottom,
-    hsl(0, 0%, 100%) 0%,
-    hsl(0, 0%, 78%) 15%,
-    hsl(0, 0%, 89%) 40%,
-    hsl(0, 0%, 77%) 85%
-  );
+  background: lightgrey;
 }
 
 
