--- a/frontend/src/Admin/Pages/ManageProducts/ManageProducts.css
+++ b/frontend/src/Admin/Pages/ManageProducts/ManageProducts.css
@@ -202,6 +202,18 @@
   width: 4rem;
 }
 
+.product-table th:nth-child(4),
+.product-table th:nth-child(7),
+.product-table th:nth-child(8) {
+  text-align: center;
+}
+
+.AdminItem-row td:nth-child(4),
+.AdminItem-row td:nth-child(7),
+.AdminItem-row td:nth-child(8) {
+  text-align: center;
+}
+
 .product-table tbody tr {
   border-bottom: 1px solid #e5e7eb;
   transition: background-color 0.2s;
